# llama-cpp-chat-memory

./: .gitignore  404.html  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff_defaults.toml  search.html  sitemap.xml
UNLICENSE/: index.html
card_format/: index.html
configs/: index.html
creating_embeddings/: index.html
csv/: index.html
docs/: card_format.md  configs.md  creating_embeddings.md  csv.md  examples.md  getting_started.md  index.md  named_entity_recognition.md  preparing_the_env.md  prompt_support.md  running_the_chatbot.md  running_the_env.md  webscraping.md
examples/: index.html
getting_started/: index.html
named_entity_recognition/: index.html
preparing_the_env/: index.html
prompt_support/: index.html
running_the_chatbot/: index.html
running_the_env/: index.html
search/: search_index.json
src/llama_cpp_chat_memory/: .env.example  __init__.py  character_chat.py  chat.py  conversation_manager.py  flask_web_server.py  parse_documents.py  parse_json_documents.py  parse_text_documents.py  run_chat.py  test_embeddings.py  test_llm.py
src/llama_cpp_chat_memory/.chainlit/: config_example.toml
src/llama_cpp_chat_memory/custom_llm_classes/: custom_spacy_embeddings.py
src/llama_cpp_chat_memory/developer/: test_embeddings.py  test_llm.py
src/llama_cpp_chat_memory/document_analysis/: ctfidf.py  general_word_frequency.py  generate_uuid.py  parse_ner.py
src/llama_cpp_chat_memory/document_parsing/: collection_helper.py  conll_test.py  filter_csv.py  generate_uuid.py  parse_csv_to_text.py  parse_json_documents.py  parse_ner.py  parse_ner_old.py  parse_pdf_documents.py  parse_text_documents.py  parse_text_documents_old.py  parse_text_documents_simple.py  spacy_explain.py  terminal_chatbot.py  test_embeddings.py  test_llm.py  test_query.py  textacy_parsing.py  web_scraper.py  web_scraper_old.py
src/llama_cpp_chat_memory/document_parsing/extract/: __init__.py  _exts.py  acros.py  bags.py  basics.py  kwic.py  matches.py  triples.py  utils.py
src/llama_cpp_chat_memory/document_parsing/extract/keyterms/: __init__.py  scake.py  sgrank.py  textrank.py  yake.py
src/llama_cpp_chat_memory/document_parsing/io/: __init__.py  csv.py  http.py  json.py  matrix.py  spacy.py  text.py  utils.py
src/llama_cpp_chat_memory/document_parsing/preprocessing/: __init__.py  normalize.py  pipeline.py  remove.py  replace.py  resources.py
src/llama_cpp_chat_memory/document_parsing/representations/: __init__.py  matrix_utils.py  network.py  sparse_vec.py  vectorizers.py
src/llama_cpp_chat_memory/document_parsing/similarity/: __init__.py  edits.py  hybrid.py  sequences.py  tokens.py
src/llama_cpp_chat_memory/document_parsing/spacier/: __init__.py  core.py  extensions.py  utils.py
src/llama_cpp_chat_memory/document_parsing/utils/: cache.py  constants.py  corpus.py  errors.py  types.py  utils.py
src/llama_cpp_chat_memory/documents/: john.txt
src/llama_cpp_chat_memory/documents/hogwarts/: main_hogwarts_sillytavern.json
src/llama_cpp_chat_memory/documents/honkai_impact/: main_lorebook-honkai-impact-b1fcfc23_agnai.json
src/llama_cpp_chat_memory/documents/honkai_impact/temp/: main_lorebook-honkai-impact-b1fcfc23_sillytavern.json
src/llama_cpp_chat_memory/documents/skynet/: skynet.txt
src/llama_cpp_chat_memory/prompt_templates/: question_generation_template.json  question_refining_metadata_template.json  question_refining_template.json  question_refining_template2.json
src/llama_cpp_chat_memory/run_files/documents/fyodor_dostoyevsky/: notes_from_the_underground.epub
src/llama_cpp_chat_memory/run_files/documents/hogwarts/: main_hogwarts-legacy-lore-b819ccba_agnai.json
src/llama_cpp_chat_memory/run_files/documents/shodan/: shodan.txt
src/llama_cpp_chat_memory/run_files/documents/shodan_mes/: shodan_message_examples.txt
src/llama_cpp_chat_memory/run_files/documents/skynet/: skynet.txt
src/llama_cpp_chat_memory/run_files/documents/warhammer_40k/: warhammer_40k.txt
src/llama_cpp_chat_memory/run_files/filters/: csv_filter.json  web_scrape_filter.json
src/llama_cpp_chat_memory/run_files/models/: models.txt
src/llama_cpp_chat_memory/run_files/parse_configs/: csv_columns.json  ner_types.json  ner_types_analyze.json  ner_types_full.json  ner_types_test.json  query_metadata_filter.json
src/llama_cpp_chat_memory/run_files/prompt_templates/: conversation_template.json  conversation_template2.json  question_generation_template.json  question_refining_metadata_template.json
src/llama_cpp_chat_memory/run_files/run_settings/: run_config.json
src/llama_cpp_chat_memory/run_files/web_scrape_configs/: shodan.json  skynet.json  warhammer_40k.json
src/llama_cpp_chat_memory/run_files/web_scrape_configs_old/: warhammer_40k.json
src/llama_cpp_chat_memory/static/: style.css
src/llama_cpp_chat_memory/web_scrape_configs/: skynet.json
webscraping/: index.html
